<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96E639"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button3"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="Mixed"
        android:layout_marginStart="15dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/glass_button"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_below="@+id/question"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/bio_button"
        android:textSize="16sp" />


    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button2"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:text="@string/metal_button"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button4"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:text="Bulky"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/question"
        android:layout_width="274dp"
        android:layout_height="170dp"

        android:layout_below="@+id/bin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars[15]" />


    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_below="@+id/question"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:text="@string/paper_button"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:text="@string/Bin"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="4dp"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:text="00:20"
        android:layout_marginTop="4dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_alignParentRight="true"
        android:textSize="15sp"/>



</RelativeLayout>